--- a/assets/css/l_style.css
+++ b/assets/css/l_style.css
@@ -4,8 +4,9 @@
 
 
 body {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   font-family: "Host Grotesk", sans-serif;
   font-optical-sizing: auto;
@@ -20,7 +21,7 @@ body {
 .headd-login{
   display: grid;
   grid-template-areas:
-    'head ... ... ... ... ... ... link-1 link-2 ...';
+    'head ... ... ... ... ... link-1 link-2 ...';
   gap: 0px;
   padding: 0vw;
   vertical-align: middle;
@@ -54,7 +55,7 @@ body {
 
 .welcome {
   grid-area: boxx;
-  padding: 3vw;
+  padding: 2vw;
   color: rgb(0, 0, 0);
   font-size: 5vw;
   font-weight: 70vw;
@@ -152,7 +153,6 @@ a{
   color: rgb(0, 0, 0);
   width: 100%;
   height: 5vw;
-  display: flex;
   background: rgba(255, 255, 255, 0.199);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
   backdrop-filter: blur( 20px );
@@ -160,23 +160,21 @@ a{
   border-radius: 1px;
   border: 0px solid rgba( 255, 255, 255, 0.18 );
   font-size: 0.9vw;
-  position: absolute;
-  bottom:0;
   text-align: start;
   padding:10px;
-  margin: 0;
+  margin-top: auto;
 }
 
 .topgrid {
   display: grid;
   grid-template-areas:
-    'header header ...'
-    'boxx main ...'
-    'foo foo ..'
+    'boxx main cook'
+    '... main cook'
+    'foo foo foo'
     '... ... ...'
     '... ... ...'
     '... ... ...';
-  gap: 10px;
+  gap: 20px;
   padding: 5vw;
   width: 80% ;
   margin-top: 30px;
@@ -204,6 +202,7 @@ a{
     ),
     linear-gradient(-150deg, var(--_l)) #55897c /* third color here */;
   background-size: calc(0.866 * var(--s)) var(--s);
+  margin-bottom: 20px;
 }
 
 .topgrid > div {
@@ -211,6 +210,177 @@ a{
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
 }
+
+.subs{
+  width: 30vw;
+  grid-area:main;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 0.4em;
+  background-color: #55897ce1 !important;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 25px;
+  transition: .4s ease-in-out;
+  padding: 30px;
+}
+
+.subs:hover {
+  transform: scale(1.05);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.att{
+  grid-area: main;
+  display: flex;
+  font-size: 2vw;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 0.4em;
+  background-color: #55897cbe !important;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 25px;
+  transition: .4s ease-in-out;
+  padding: 30px;
+}
+
+.att:hover {
+  transform: scale(1.05);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.pa{
+  grid-area: cook;
+  display: flex;
+  font-size: 2vw;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 0.4em;
+  background-color: #55897cb9 !important;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 25px;
+  transition: .4s ease-in-out;
+  padding: 30px;
+}
+
+.pa:hover {
+  transform: scale(1.05);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.marks{
+  grid-area: foo;
+  height: 100%;
+  display: flex;
+  font-size: 2vw;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 0.4em;
+  background-color: #55897cc5 !important;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+  backdrop-filter: blur( 20px );
+  -webkit-backdrop-filter: blur( 20px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  border-radius: 25px;
+  transition: .4s ease-in-out;
+  padding: 30px;
+}
+
+.marks:hover {
+  transform: scale(1.05);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+
+.butt{
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  color:#5c5000;
+  padding: 2vw;
+  cursor: pointer;
+  font-size: 1.5vw;
+  border-radius: 1000px;
+  background:#ACC4A3;
+  border: 1px solid #000000;
+  box-shadow: 6px 6px 12px #36574f, -6px -6px 12px #3c6158;
+}
+
+.butt:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.butt:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 100%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.butt:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #ACC4A3;
+  border-radius: 100%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.butt:hover {
+  color: #000000;
+  border: 1px solid #ACC4A3;
+}
+
+.butt:hover:before {
+  top: -35%;
+  background-color: #ACC4A3;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.butt:hover:after {
+  top: -45%;
+  background-color: #ACC4A3;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
 
 .form {
   grid-area: main;
